--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.4.3",
+    "@types/classnames": "^2.2.9",
     "@types/jest": "24.0.18",
     "@types/lodash": "^4.14.144",
     "@types/node": "12.7.12",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
     "@types/validator": "^10.11.3",
+    "classnames": "^2.2.6",
     "bootstrap": "^4.3.1",
     "lodash": "^4.17.15",
     "react": "^16.10.2",
